--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
             <input type="checkbox" id="menu-toggle" class="menu-toggle" title="Toggle navigation menu" />
 
             <!-- Menu de navegacion -->
-              
+             <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="./index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./menu.html" class="nav-link">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./galeria.html" class="nav-link">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./contactenos.html" class="nav-link">Contactenos</a>
+                </li>
+             </ul>
             
              <!-- acciones: icono usuario + botón hamburguesa -->
             <div class="nav-actions">
